--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>muito importante</title>
-  <link rel="stylesheet" href="cuzinho.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main>
@@ -15,6 +15,6 @@
         <button class="Nao" id="2" onmousemove="Nao(id)">Nunca</div>
     </section>
   </main>
-  <script src="cuzinho.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
