--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <section class="tudo">
         <h1 align= "center"><b>Cuzinho hoje?</b></h1>
         <button class="Sim" onclick="Sim()"><b>Sim</b></div>
-        <button class="Nao" id="2" onmousemove="Nao(id)">Nunca</div>
+        <button class="Nao" id="2" onmousemove="Nao(id)"><b>Nunca</b></div>
     </section>
   </main>
   <script src="script.js"></script>
